--- a/app/src/main/res/layout/fragment_landing.xml
+++ b/app/src/main/res/layout/fragment_landing.xml
@@ -42,5 +42,11 @@
             android:layout_height="wrap_content"
             android:text="trafik isaretleri" />
 
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_exam_tips"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="tuyolar" />
+
     </LinearLayout>
 </layout>
