--- a/app/src/main/res/layout/fragment_landing.xml
+++ b/app/src/main/res/layout/fragment_landing.xml
@@ -54,5 +54,11 @@
             android:layout_height="wrap_content"
             android:text="plakalar" />
 
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_faq"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="sıkça sorulan sorular" />
+
     </LinearLayout>
 </layout>
