LICENCE-INFO/Created speed limits fragment

--- a/app/src/main/res/layout/fragment_landing.xml
+++ b/app/src/main/res/layout/fragment_landing.xml
@@ -66,5 +66,11 @@
             android:layout_height="wrap_content"
             android:text="ehliyet siniflari" />
 
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_speed_limits"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="hiz sinirlari" />
+
     </LinearLayout>
 </layout>
