--- a/app/src/main/res/layout/fragment_landing.xml
+++ b/app/src/main/res/layout/fragment_landing.xml
@@ -78,5 +78,11 @@
             android:layout_height="wrap_content"
             android:text="trafik cezalari" />
 
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_user_feedback"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="geri bildirim" />
+
     </LinearLayout>
 </layout>
